# OmniClock

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  funding.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: release.yml
scripts/: release.ps1  release.sh
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CustomTitleBar.tsx
src/components/Countdown/: CountdownView.tsx
src/components/Pomodoro/: PomodoroView.tsx
src/components/Settings/: SettingsView.tsx
src/components/Stopwatch/: StopwatchView.tsx
src/components/Timer/: TimerConfigForm.tsx  TimerControls.tsx  TimerDisplay.tsx  TimerView.tsx
src/components/ui/: button.tsx  label.tsx  separator.tsx  switch.tsx
src/contexts/: CountdownContext.tsx  PomodoroContext.tsx  StopwatchContext.tsx  ThemeContext.tsx  TimerContext.tsx
src/hooks/: useUpdateCheck.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  fr.json  ja.json  zh-TW.json  zh.json
src/types/: index.ts
src/utils/: autostart.ts  sound.ts  storage.ts  time.ts  version.ts
